hard-gists/1387470/run.log
=== Docker Run Log for 1387470 ===
Started at: Mi 29. Okt 12:11:56 CET 2025

[2025-10-29 12:11:56] START: Running container for 1387470
[2025-10-29 12:11:57] SUCCESS: Container f6f50dffacc21f43d12a2a0461b525e6c295e247f040081679d48811fa9731a7 started for 1387470
=== Container logs for 1387470 ===
  File "/snippet.py", line 157
    except ValueError, e:
           ^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1387470 ===
[2025-10-29 12:11:59] INFO: Container f6f50dffacc21f43d12a2a0461b525e6c295e247f040081679d48811fa9731a7 has stopped
